# tree-sitter-ca65

./: .editorconfig  .gitignore  Cargo.toml  LICENSE.txt  Makefile  PROGRESS.md  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: tests.yml
queries/: highlights.scm
queries/ca65/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: ADC.txt  AND.txt  ASL.txt  BCC.txt  BCS.txt  BEQ.txt  BIT.txt  BMI.txt  BNE.txt  BPL.txt  BRK.txt  BVC.txt  BVS.txt  CLC.txt  CLD.txt  CLI.txt  CLV.txt  CMP.txt  CPX.txt  CPY.txt  DEC.txt  DEX.txt  DEY.txt  EOR.txt  INC.txt  INX.txt  INY.txt  JMP.txt  JSR.txt  LDA.txt  LDX.txt  LDY.txt  LSR.txt  NOP.txt  ORA.txt  PHA.txt  PHP.txt  PLA.txt  PLP.txt  ROL.txt  (+21 more)
